# diploma-code

./: .gitignore  CMakeLists.txt  README.md  main.cpp
internal/fibonacci_heap/: max_heap.hpp
internal/graph/: graph.cpp  graph.hpp
internal/networks/: mapping_graphs.hpp
internal/parser/: parser.cpp  parser.hpp
internal/solver/: solver.cpp  solver.hpp
tests/: get_best.py  runner.py  test1.json
tests/dragonfly/: gen.py
tests/full_connect/: gen.py  test_9_2.json
tests/random_topology/: gen.py
tests/star_topology/: gen.py
